--- a/src/main/resources/public/angebot.html
+++ b/src/main/resources/public/angebot.html
@@ -21,6 +21,11 @@
       <page-header :marker="'Angebot'"></page-header>
       <page-header-angebot v-bind:marker="'Erstellen'"></page-header-angebot>
       <div id="content">
+        <produkt-suchen
+          :show-dialog="showDialog"
+          @return="chooseFunction"
+          @edit="editFunction"
+        ></produkt-suchen>
         <div class="form" style="width: 1000px;">
           <h3>{{ $t("angebot.gewaehltePosten") }}:</h3>
           <table>
@@ -116,6 +121,7 @@
   <script src="/scripts/ersteller.select.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/inventar/produkt.suchen.component.js"></script>
   <script src="/scripts/angebot/angebot.header.component.js"></script>
   <script src="/scripts/angebot/angebot.js"></script>
   <script src="/scripts/angebot/angebotsposten.edit.dialog.component.js"></script>
