Rechnungssuche erweitert um Kontrollkästchen, ob Angebote, Reparaturen, Bestellungen zur Rechnung hinterlegt sind

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -222,6 +222,9 @@
       Das Recht <em>RECHNUNG_VERWALTEN</em> wird benötigt um Rechnungen zu bearbeiten oder zu löschen.
     </p>
     <p>Auf dieser Seite befindet sich eine Auflistung aller Rechnungen. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
+    <p>Sind die Suchfilter nach den Kontrollkästchen <em>Mit Angeboten</em>, <em>Mit Bestellungen</em> und <em>Mit Reparaturaufträgen</em> aktiv,
+    werden die darüberliegenden Suchfilter ignoriert.</p>
+    <p>Ist das Suchfeld <em>Rechnungsposten durchsuchen nach Bezeichnung / Seriennummer / Hinweis</em> gefüllt, werden die darüberliegenden Suchfilter ignoriert.</p>
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann die Rechnung in der Druckansicht angezeigt werden. Dazu wird das Recht <em>RECHNUNG</em> benötigt.</p>
     <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann die Rechnung bearbeitet werden.
       Dabei ist es nur möglich das Rechnungsdatum, die Zahlart, den Kunden und Reparaturauftrag zu ändern.
