Funktion in Rechnungsübersicht um Lieferschein aus Rechnung zu erstellen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -231,6 +231,7 @@
       Zudem darf die Menge, Bezeichnung, der Hinweis, die Seriennummer und der Rabatt von bestehenden Posten geändert werden. Es dürfen jedoch keine neuen Posten hinzugefügt oder bestehende entfernt werden.
       Das Bearbeiten der Menge nimmt keinen Einfluss auf den Bestand im Inventar. Dies wird lediglich beim Erstellen beeinflusst.
     </p>
+    <p>Durch Klick auf das <em>Lieferschein-Icon</em> kann zur Rechnung ein Lieferschein in der Druckansicht angezeigt werden. Dazu wird das Recht <em>RECHNUNG</em> benötigt.</p>
     <p>Durch Klick auf das <em>E-Mail-Icon</em> kann dem Kunden die Rechnung zugesendet werden. Dazu muss die Rechnung zuerst als PDF gedruckt und im
       sich öffnenden Dialog gewählt werden.
       Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
