Mehrere PDFs beim Senden von Angeboten wählbar machen
Die Dateien müssen im selben Verzeichnis liegen und sinnvolle Dateinamen bekommen, da diese 1:1 übermittelt werden.
Sinnvolle Dateinamen für Angebots- und Rechnungsdateien vergeben

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -270,8 +270,12 @@
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann das Angebot in der Druckansicht angezeigt werden. Dazu wird das Recht <em>ANGEBOT</em> benötigt.</p>
     <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann das Angebot bearbeitet werden.</p>
     <p>Durch Klick auf das <em>Duplizieren-Icon</em> kann das Angebot dupliziert werden.</p>
-    <p>Durch Klick auf das <em>E-Mail-Icon</em> kann dem Kunden das Angebot zugesendet werden. Dazu muss das Angebot zuerst als PDF gedruckt und im
-      sich öffnenden Dialog gewählt werden.
+    <p>Durch Klick auf das <em>E-Mail-Icon</em> kann dem Kunden das Angebot und weitere PDF-Dokumente zugesendet werden.
+      Dazu muss das Angebot zuerst als PDF gedruckt und im sich öffnenden Dialog gewählt werden.
+      Alle weiteren Dokumente müssen sich ebenfalls in diesem Ordner befinden und können dort gewählt werden.
+      Der Dateiname der Angebotsdatei und der Anhänge ist hier relevant, da diese 1:1 an den Kunden so übermittelt werden.
+      Die Sortierung der Dateien in der Liste der Anhänge ist abhängig davon, wie die Dateien im Auswahlexplorer sortiert sind.
+      Die Reihenfolge in der Dokumente angeklickt werden ist nicht relevant.
       Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
     </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann ein Angebot nach nochmaliger Bestätigung gelöscht werden.</p>
