Rechnungen aus Angeboten erstellen ermöglicht

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -28,6 +28,7 @@
           <li>
             <a href="#erstellen-1">Erstellen</a>
             <ul>
+              <li><a href="angebotwhlen-1">Angebot wählen</a></li>
               <li><a href="#kundewhlen-1">Kunde wählen</a></li>
               <li><a href="#reparaturauftragwhlen">Reparaturauftrag wählen</a></li>
             </ul>
@@ -207,6 +208,12 @@
     <p>Zuletzt muss noch die Zahlart gewählt werden. Dabei ist zu beachten, dass bei der Zahlart <em>ÜBERWEISUNG</em> der <em>Kunde</em> ausgewählt werden muss.</p>
     <p>Mit des Kontrollkästchens kann gewählt werden, ob der Kundenname auf die Rechnung gedruckt werden soll. Ist kein Kunde ausgewählt, ist dieses Feld obsolet.</p>
     <p>Nach dem Speichern wird im Inventar der Bestand des Produktes um die entsprechende Menge reduziert.</p>
+    <h4 id="angebotwhlen-1">Angebot wählen</h4>
+    <p>Um ein Angebot zu wählen muss neben dem Label <em>Angebot</em> das <em>Angebot-Icon</em> geklickt werden. Anschließend öffnet sich ein Dialog in dem das entsprechende Angebot gesucht werden kann.
+      Durch Klick auf das <em>OK-Icon</em> wird das Angebot gewählt und der Dialog schließt sich.
+    </p>
+    <p>Durch Wahl des Angebots wird automatisch der Kunde gewählt und die Rechnungsposten mit den Angebotsposten aufgefüllt.</p>
+    <p>Wird das Angebot wieder abgewählt, bleiben die aus dem Angebot übernommenen Posten bestehen!</p>
     <h4 id="kundewhlen-1">Kunde wählen</h4>
     <p>Um den Kunden zu wählen muss neben dem Label <em>Kunde</em> das <em>Kunde-Icon</em> geklickt werden. Anschließend öffnet sich ein Dialog in dem der entsprechende Kunde gesucht werden kann.
       Durch Klick auf das <em>OK-Icon</em> wird der Kunde ausgewählt und der Dialog schließt sich.
