Korrekte Vorbefüllung der Nummernfelder der Suchdialoge nach Angeboten, Bestellungen und Reparaturen

--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -142,12 +142,14 @@
         @saved="handleAngebotResponse"
       ></angebot-suchen-dialog>
       <bestellung-suchen-dialog
+        :bestellung="entity.rechnung.bestellung"
         :kunde="entity.rechnung.kunde"
         v-if="showBestellungDialog"
         @close="showBestellungDialog = false"
         @saved="handleBestellungResponse"
       ></bestellung-suchen-dialog>
       <reparatur-suchen-dialog
+        :reparatur="entity.rechnung.reparatur"
         :kunde="entity.rechnung.kunde"
         v-if="showReparaturDialog"
         @close="showReparaturDialog = false"
