--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -438,6 +438,14 @@
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_EINSTELLUNGEN_ALLGEMEIN</em> benötigt.</p>
     <h4 id="ablageverzeichnis">Ablageverzeichnis</h4>
     <p>Das hier definierte Verzeichnis wird verwendet, um die Statistiken und Kassenstände abzulegen.</p>
+    <h4 id="mwst">Mehrwertsteuer in Prozent</h4>
+    <p>Hier kann die Mehrwertsteuer verändert werden.
+      Nach dem Speichern dieser Einstellung wird bei allen neu erstellten Rechnungen und Angeboten mit der neuen Mehrwertsteuer gerechnet.
+      Zudem wird beim Bearbeiten von Produkten die neue Mehrwertsteuer berücksichtigt.
+      Zusätzlich steht eine Schaltfläche zur Verfügung um den Netto-Verkaufspreis aller Produkte anzupassen.
+      Dabei wird der Brutto-Verkaufspreis als Basis verwendet und nicht verändert.
+      Die Einkaufspreise werden ebenfalls nicht automatisch verändert.
+    </p>
     <h4 id="ftpserver">FTP-Server</h4>
     <p>Hier sind die Verbindungsdaten zum FTP-Server anzugeben.
       Diese Daten dienen dazu, um die Bestellliste lesen/schreiben zu können.
