--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -128,7 +128,7 @@
         <td width="75" align="center" valign="top" height="19">&nbsp;</td>
         <td width="587" align="center" valign="top" height="19" style="border-right-style: none; border-right-width: medium">&nbsp;</td>
         <td width="216" align="right" valign="top" height="20" style="border-left-style: none; border-left-width: medium; border-right-style: none; border-right-width: medium; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1" colspan="2">
-        <font face="Arial" style="font-size: 9pt">{{ $t("rechnung.mwst") }}:</font></span></td>
+        <font face="Arial" style="font-size: 9pt">{{ $t("rechnung.mwst") }} ({{ entity.rechnung.mwst }}%):</font></span></td>
         <td width="116" align="right" valign="top" height="20" style="border-left-style: none; border-left-width: medium; border-right-style: none; border-right-width: medium; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1">
         <font face="Arial" style="font-size: 9pt">{{ formatMoney(gesamtmwst) }} &euro;</font></td>
         </tr>
